--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
     caret-color: transparent;
 }
 
+
 header {
     margin-top: 15px;
     height: 50px;
+    border-bottom: 1px solid rgb(230, 227, 227);
 }
 
 ul {
@@ -44,6 +46,7 @@ li span a {
     color: rgb(255, 255, 255);
     background-color: rgb(114, 114, 231);
 }
+
 li #menu-icons {
     width: 20px;
     height: 20px;
@@ -103,6 +106,7 @@ section {
     display: flex;
     justify-content: center;
 }
+
 .buttondiv button {
     font: 1.0 "Fira Sans", sans-serif;
     margin: 10px;
@@ -111,11 +115,14 @@ section {
 
 footer {
     background-color: rgb(233, 229, 229);
+    width: 100%;
     height: 8vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font: 1.1rem "Fira Sans", sans-serif;
+    position: fixed;
+    bottom: 0;
 }
 
 .leftbar {
